fix week view of fullcalendar (#324)
* fix week view of fullcalendar

* readd arrow config

* fix import

* readd appentTo option

* do not allow overlapping events

---------

--- a/resources/admin/calendar.scss
+++ b/resources/admin/calendar.scss
@@ -52,6 +52,12 @@
     }
 }
 
+// Week view
+.fc-timegrid-event-harness .fc-event {
+    max-width: 100%;
+    overflow: hidden;
+}
+
 .tippy-content {
     min-width: 19rem;
 
